src/bootstrap/test/v0_13/rejects/02_interpolation_unknown_binding_macos/main.zg
# requires: v0.13
asm {
	mov x0, ${missing}
	svc #0x80
}
